# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

*portage-2.0.51_rc2 (25 Sep 2004): And we another Release Candidate!

  25 Sep 2004; Nicholas Jones <carpaski@gentoo.org> portage_db_flat.py: Fix
	for typos.

  25 Sep 2004; Nicholas Jones <carpaski@gentoo.org> portage_locks.py: Changed
  all the calls to lockf which wraps fcntl. Made the chown on the locks
  optional -- if it fails, it'll be annoying, but there's a message. Added
  code to perform the hardlink-shuffle which uses hardlinks as a locking
  mechanism (NFSv2 needs this).

  25 Sep 2004; Nicholas Jones <carpaski@gentoo.org> portage_db_flat.py:
  Added locking around the file creation to ensure atomicity.
  
  25 Sep 2004; Nicholas Jones <carpaski@gentoo.org> portage_localization.py:
  A little spot to provide the '_' function and examples and future code.

  25 Sep 2004; Nicholas Jones <carpaski@gentoo.org> portage_file.py: Added
  the module to contain file/directory functions that are useful. Additional
  function 'makedirs' handles creation of directories with recursive perms.
  
  25 Sep 2004; Nicholas Jones <carpaski@gentoo.org> getbinpkg.py: Fixed the
  exception handling to not traceback.
  
  25 Sep 2004; Nicholas Jones <carpaski@gentoo.org> etc-update: Typo fix.
  
  25 Sep 2004; Nicholas Jones <carpaski@gentoo.org> emerge: Caused the
  binary metadata downloading to be a little more verbose. Fixed the
  sync command's arguments so that it deletes top level files.

  25 Sep 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Added
  Cretin's patch for prelink blacklists. Increased the verbosity of the
  'mylines' output to let people know what files are affected with nulls.